--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <h1>FELIZ NOSSO DIA MEU AMOR!! S2</h1>
+    <h1>Feliz nosso dia meu amor!! S2</h1>
 </head>
 
 <body>  
@@ -53,7 +53,11 @@
             minhas forças. Você me faz o cara mais feliz do mundo!!! Você é incrível</p>
     </div>
     <img class="foto" src="/assets/fotonaPraca.jpg" alt="fotonaPraca">
+    
 
+</div>
+<div class="sectionA">
+    <img class="foto" src="/assets/ftcasamento.jpg" alt="ftcasamento">
 </div>
     <script>
        var video1 = document.getElementById("video");
